--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>It's a Book!</title>
   </head>
-  <body>
+  <body style="background-color: #1e1e1e; margin: 0; padding: 0;">
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
